--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="map"></div>
 
     <!-- Load the Google Maps JavaScript API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFkCZbfL_zFHU7iPP3_29-nhjt9JQqijA&callback=initMap" async defer></script>
 
     <!-- Link to your external JavaScript file on GitHub -->
     <script src="https://raw.githubusercontent.com/donglin1608/Maptoday/main/script.js"></script>
